--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "mocha '__tests__/*.test.js' --reporter mochawesome --recursive  --timeout 60000 --exit",
     "run": "node ./server.js",
-    "start": "node ./server.js"
+    "start": "nodemon ./server.js"
   },
   "author": "",
   "license": "ISC",
